RESOLVED FIXED 121674
[ATK] Missing WTR AccessibilityController::addNotificationListener implementation
https://bugs.webkit.org/show_bug.cgi?id=121674
Summary [ATK] Missing WTR AccessibilityController::addNotificationListener implementa...
Denis Nomiyama (dnomi)
Reported 2013-09-20 06:03:58 PDT
AccessibilityController of WTR in the GTK+ port is missing global event notification implementation.
Attachments
Patch (5.65 KB, patch)
2013-09-20 08:52 PDT, Denis Nomiyama (dnomi)
no flags
Patch (5.57 KB, patch)
2013-09-24 06:18 PDT, Denis Nomiyama (dnomi)
no flags
Denis Nomiyama (dnomi)
Comment 1 2013-09-20 08:52:21 PDT
Mario Sanchez Prada
Comment 2 2013-09-24 05:43:28 PDT
Comment on attachment 212173 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=212173&action=review The patch is great, just r- because of the EFL bit, which I think it's better to leave it to the EFL guys (so they can test it first) > Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:100 > +#if !PLATFORM(GTK) && !PLATFORM(EFL) && !PLATFORM(MAC) Unless you are sure about this working on EFL, I think it's probably better to live the EFL check out of this patch and let the EFL guys (Krzysztof) know about the change with a comment in bug 112003, where they track the issue about the same failing test, buyt for EFL-WK2
Denis Nomiyama (dnomi)
Comment 3 2013-09-24 05:48:53 PDT
Comment on attachment 212173 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=212173&action=review Thanks for the review. I will modify the patch accordingly. >> Tools/WebKitTestRunner/InjectedBundle/AccessibilityController.cpp:100 >> +#if !PLATFORM(GTK) && !PLATFORM(EFL) && !PLATFORM(MAC) > > Unless you are sure about this working on EFL, I think it's probably better to live the EFL check out of this patch and let the EFL guys (Krzysztof) know about the change with a comment in bug 112003, where they track the issue about the same failing test, buyt for EFL-WK2 Sure. I'll change the patch and will add a comment to 112003.
Denis Nomiyama (dnomi)
Comment 4 2013-09-24 06:18:43 PDT
Created attachment 212458 [details] Patch Modified the patch according to review comments.
Mario Sanchez Prada
Comment 5 2013-09-24 07:17:09 PDT
Comment on attachment 212458 [details] Patch thanks!
WebKit Commit Bot
Comment 6 2013-09-24 07:22:57 PDT
Comment on attachment 212458 [details] Patch Clearing flags on attachment: 212458 Committed r156332: <http://trac.webkit.org/changeset/156332>
WebKit Commit Bot
Comment 7 2013-09-24 07:23:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.