[ATK] Missing WTR AccessibilityController::addNotificationListener implementation https://bugs.webkit.org/show_bug.cgi?id=121674

Patch by Denis Nomiyama <d.nomiyama@samsung.com> on 2013-09-24
Reviewed by Mario Sanchez Prada.

Tools:

Implemented the global notification listener for
AccessibilityController. The signal is generated by
AXObjectCache::postPlatformNotification() and received by
axObjectEventListener(). axObjectEventListener will then invoke
JSObjectCallAsFunction() with the respective callback function.

There is no additional test for this patch since its implementation will
be tested by an accessibility layout test that is currently failing
(accessibility/loading-iframe-sends-notification.html).

* WebKitTestRunner/InjectedBundle/AccessibilityController.cpp: Removed
stub implementations of addNotificationListener and
removeNotificationListener for the GTK port.
* WebKitTestRunner/InjectedBundle/atk/AccessibilityControllerAtk.cpp:
(WTR::AccessibilityController::addNotificationListener): Creates the
notification handler and sets the notification function callback.
(WTR::AccessibilityController::removeNotificationListener): Removes the
global handler.

LayoutTests:

Updated the expectation of loading-iframe-sends-notification.html test,
which was failing before this fix.

* platform/gtk-wk2/TestExpectations: Removed
loading-iframe-sends-notification.html because it now passes with this
fix.

Canonical link: https://commits.webkit.org/139840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156332 268f45cc-cd09-0410-ab3c-d52691b4dbfc